rust/macros/tests/invalid/target/debug/deps/leading_comma-07a94a1937dd674c.d
/Users/ray/projects/exercism/rust/macros/tests/invalid/target/debug/deps/leading_comma-07a94a1937dd674c.d: leading_comma.rs Cargo.toml

/Users/ray/projects/exercism/rust/macros/tests/invalid/target/debug/deps/libleading_comma-07a94a1937dd674c.rmeta: leading_comma.rs Cargo.toml

leading_comma.rs:
Cargo.toml:

# env-dep:CLIPPY_ARGS=--no-deps__CLIPPY_HACKERY__
# env-dep:CLIPPY_CONF_DIR
